<resources>
    <string name="app_name">Finger Tube</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Sei sicuro di voler effettuare il logout?</string>

    <string name="ok">OK</string>
    <string name="cancel">Annulla</string>
    <string name="loading">Caricamento…</string>
    <string name="inserisci_codice">Inserisci codice</string>
    <string name="welcome_title">Ciao, benvenuto in Finger Tube</string>
    <string name="welcome_msg">Vai nella sezione Account della tua applicazione Finger Tube sulla tua TV e inserisici il codice che viene visualizzato</string>
    <string name="inserisci_codice_msg">Inserisci il codice che visualizzi sulla tua TV</string>
    <string name="code_error_tite">Errore associazione TV</string>
    <string name="code_error_msg">Il codice che hai inserito non corrisponde a nessuna TV</string>
    <string name="welcome_video_msg">Vai sulla tua TV e apri un video</string>
    <string name="commenti">Commenti</string>
    <string name="new_comment_hint">Scrivi un nuovo commemnto</string>
    <string name="new_comment">Nuovo commento</string>
</resources>
