<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:layout_width="58dp"
        android:layout_centerInParent="true"
        android:layout_height="58dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:background="@drawable/background"
        android:id="@+id/add_tv_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_title"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_msg"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/add_tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_codice" />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/background"
        android:id="@+id/open_video_in_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_title"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_video_msg"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:background="@drawable/background"
        android:id="@+id/comment_container"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/video_image"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/video_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/primary_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/commenti"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/comment_list"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/new_comment"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_new_comment"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

</RelativeLayout>
